# hammer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: compare.rs  generate.rs  mod.rs  prefetch.rs  util.rs  validate.rs
cli/tests/: cli_test.rs  rpc_test.rs
core/: Cargo.toml
core/src/: error.rs  gas.rs  lib.rs  optimizer.rs  tracer.rs  types.rs  validator.rs  warm.rs
core/tests/: generate_test.rs  validate_test.rs
