[package]
name = "hammer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hammer"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.7.3", features = ["providers", "transports", "transport-http", "rpc-types", "network", "eips"] }
alloy-eips = "1.7.3"
alloy-primitives = "1.5.7"
alloy-provider = "1.7.3"
alloy-rpc-types-eth = "1.7.3"
hammer-core = { version = "0.1.0", path = "../core" }
clap = { version = "4.5.60", features = ["derive"] }
eyre = "0.6.12"
hex = "0.4.3"
reqwest = "0.13.2"
revm = { version = "34.0.0", features = ["std", "alloydb", "asyncdb"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3.32"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
ureq = { version = "3.2.0", features = ["json"] }
